# helloocaml

./: README.md  data.ml  data.mli  dune-project  main  main.ml
lib/: dune
test/: dune
